new xpath logic